# QAMule

./: .gitignore  README.md  README_ZH.md  distiller-agent-workflow-bilingual.excalidraw  plugin.json  qa-agent-workflow-bilingual.excalidraw
agents/: android-test-author.agent.md  android-test-fixer.agent.md  coordinator.agent.md  distiller.agent.md  explorer.agent.md  first-responder.agent.md  maintainer.agent.md  qa.agent.md
skills/dataset/: SKILL.md
skills/dataset/scripts/: trajectory.py  validate.sh  viewer.py
skills/init/: SKILL.md
skills/init/assets/: .gitignore  pyproject.toml
skills/init/assets/pytest_plugins/: device.py  pause_on_failure.py
skills/init/templates/: AGENTS.md  pyproject.toml
skills/init/templates/dataset/: README.md
skills/init/templates/kb/: index.md
skills/init/templates/kb/app/: _index.md  _overview.md
skills/init/templates/kb/helpers/: _index.md
skills/init/templates/tests/: README.md  conftest.py
skills/kb/: SKILL.md
skills/live-pause-failure-triage/: SKILL.md
skills/pytest/: SKILL.md
skills/pytest-authoring/: SKILL.md
skills/pytest/references/: execution.md  patterns.md  running-tests.md  test-structure.md
skills/pytest/scripts/: monitor.sh  resume.sh
skills/testcase/: SKILL.md
skills/uiautomator2/: SKILL.md
skills/uiautomator2/references/: commands.md
skills/viewer/: SKILL.md
skills/viewer/scripts/: server.py
