[project]
name = "QAMule-Practice"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.3",
    "uiautomator2>=3.5.0",
    "uiautomator2-cli>=0.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-p pytest_plugins.device -p pytest_plugins.pause_on_failure"

[tool.uv]
package = false
